<resources>
    <string name="app_name">MAXTEL</string>
    <string name="input_mobile_number">Telefon raqamini kiriting...</string>
    <string name="continue_button">DAVOM ETISH</string>
    <string name="number_phone">Telefon raqam:</string>
    <string name="add_to_basket">Korzinkaga qo\'shish</string>
    <string name="update_basket">O\'zgartirish</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_phone_number">Введите номер телефона, что бы войти или зарегистрироваться</string>
    <string name="please_input_code">На ваш номер был отправлен код подтверждения. Пожалуйста введите код</string>
    <string name="sign">Вход</string>
    <string name="confirm">Подтверждение</string>

    <string name="smile_rating_bad1">Плохой</string>
    <string name="smile_rating_good1">Очень хорошо</string>
    <string name="smile_rating_great1">Отлично</string>
    <string name="smile_rating_okay1">Хорошо</string>
    <string name="smile_rating_terrible1">Очень плохо</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="please_input_all_fields">Пожалуйста, заполните все поля.</string>
    <string name="title_activity_maps">Map</string>
    <string name="register_order">Оформление заказа</string>
    <string name="contact_data">Клиент данные</string>
    <string name="fullname">Имя Фамилия</string>
    <string name="fullname_">Имя Фамилия:</string>
    <string name="phone">Номер телефона</string>
    <string name="phone_">Номер телефона:</string>
    <string name="payment_type">Способ оплаты</string>
    <string name="cashback">Наличные</string>
    <string name="payme">Payme</string>
    <string name="order_type">Тип заказа</string>
    <string name="delivery">Доставка</string>
    <string name="pickup">Самовывоз</string>
    <string name="delivery_address">Адрес доставки</string>
    <string name="comment">Комментарий</string>
    <string name="delivery_price">Цена доставки:</string>
    <string name="select_delivery_address">Выбрать место доставки</string>
    <string name="payment_type_">Тип оплаты:</string>
    <string name="order_type_">Тип заказа:</string>
    <string name="date_">Дата:</string>
    <string name="product_name">Название товара</string>
    <string name="product_c_">Кол.</string>
    <string name="amount">Сумма</string>
    <string name="tot_amount">Об.сумма</string>
    <string name="total_amount__">Итого:</string>
    <string name="do_pay">Сделать платеж</string>
    <string name="history_orders">История заказов</string>
    <string name="your_products">Ваши товары</string>
    <string name="adress_">Адрес:</string>
    <string name="your_data">Личные данные</string>
    <string name="edit">Изменить</string>
    <string name="select_branch">Выберите филиал:</string>
    <string name="code">СМС Код</string>
    <string name="success">Успешно!</string>
    <string name="your_order_accept">Ваш заказ был успешно отправлен. Вы можете отслеживать статус заказа из окна заказов.</string>
    <string name="exit_main_page">Вернуться в главное окно</string>
    <string name="swap_language">Выбрать язык</string>
    <string name="notifications">Уведомления</string>
    <string name="language">Смени язык</string>
    <string name="share">Поделится</string>
    <string name="about_app">О приложении</string>
    <string name="logout">Выйти</string>
    <string name="current_store">Выберите торговый центр</string>
    <string name="rating">Оценка</string>
    <string name="rating_updated">Рейтинг обновлен.</string>
    <string name="rating_for_services">За оказанную услугу:</string>
    <string name="rating_for_products">Ваше мнение об ассортименте:</string>
    <string name="rating_for_courier">Для поставщиков:</string>
    <string name="title_activity_news">NewsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="news">Новости</string>
    <string name="terminal">Терминал</string>
    <string name="transfer">Перечисление</string>
    <string name="input_query">Введите запрос...</string>
    <string name="store___">Склад:</string>
    <string name="payment_waiting">Платеж в ожидании.</string>
    <string name="waiting___">На рассмотрении</string>
    <string name="accepted">Принятый</string>
    <string name="making_status">Подготовлено</string>
    <string name="order_maked">Заказ готов</string>
    <string name="on_way">В пути</string>
    <string name="completed">Завершенный</string>
    <string name="order_number_">Заказ №</string>
    <string name="send_button">отправить</string>
    <string name="stores">Склады</string>
    <string name="products">Продукты</string>
    <string name="cart_">Корзина</string>
    <string name="favourites">Избранные</string>
    <string name="products_">Товары:</string>
    <string name="delivery_">Доставка:</string>
    <string name="free">Бесплатно</string>
    <string name="view_processing">Следить за процессом</string>
    <string name="download">Скачать</string>
    <string name="please_update_app">Пожалуйста, загрузите новую версию приложения!</string>
    <string name="sent_delivery_address">Отправить адрес доставки</string>
    <string name="cart_updated">Корзина обновлена.</string>
    <string name="product_removed">Товар был удален из корзины.</string>
    <string name="store_selected">Склад был выбран.</string>
    <string name="add_button">Добавить</string>
    <string name="please_clear_cart">Пожалуйста, очистите корзину или продолжите покупки.</string>
    <string name="reg_thanks">Мы рады, что вы выбрали нас !!!\nВведите эту информацию, чтобы мы могли оценить вас в рекламных акциях, проводимых нашей компанией.</string>
    <string name="datebirth">День рождения</string>
    <string name="male">Мужчина</string>
    <string name="fermale">Женщина</string>
    <string name="refreshed">Обновлено.</string>
    <string name="unity_blok">бл</string>
    <string name="unity_sht">шт</string>
    <string name="you_get_bonus">Поздравляем! Вы получаете единовременную скидку %1$s %%</string>
    <string name="sale_">Скидка:</string>
    <string name="developer">Разработчик</string>
    <string name="pro_delivery">Платная доставка</string>
    <string name="minimum_summa">Минимальная сумма покупки должна быть %1$s</string>
    <string name="max_radius_delivery">Возможна доставка до максимум %1$s км.</string>
    <string name="max_amount_del">Для бесплатной доставки сумма заказа должна быть более %1$s!</string>
    <string name="call_me">Связаться с нами</string>
    <string name="store_or_man_name">Название магазина или компании</string>
    <string name="please_select_region">Пожалуйста, выберите регион.</string>
    <string name="ditrict">Район</string>
    <string name="region">Область</string>
    <string name="please_help_me">Пожалуйста, заполните все поля, чтобы улучшить качество обслуживания!</string>
    <string name="delivery_type">Доставка</string>
    <string name="product_currency">Валюта</string>
    <string name="product_currency_">Валюта:</string>
    <string name="c_uzs">сум</string>
    <string name="act_report">Акт сверки</string>
    <string name="start_date">Начальное время</string>
    <string name="no_selected">Не выбран</string>
    <string name="please_select_two_interval">Пожалуйста, выберите два интервала.</string>
    <string name="act">Отчеты</string>
    <string name="order_number">Номер заказа</string>
    <string name="end_date_">Время окончания</string>
    <string name="please_use_all_features_registr">Пожалуйста, зарегистрируйтесь, чтобы воспользоваться всеми возможностями.</string>
    <string name="pay_from_cachback">Оплата с кэшбэка</string>
    <string name="amount_pay_from_cachback">Сумма кэшбэка</string>
</resources>
