<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:maxLines="1"
            android:layout_marginRight="4dp"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:text="@string/product_name"/>
        <TextView
            android:id="@+id/tvCount"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/product_c_"/>
        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/amount"/>
        <TextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/tot_amount"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/light_gray"
        android:layout_gravity="bottom"/>
</FrameLayout>