<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".screen.main.rating.RatingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_black_24dp"/>
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/rating"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/rating_for_products"/>

            <com.hsalf.smileyrating.SmileyRating
                android:id="@+id/ratingProducts"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/rating_for_services"/>

            <com.hsalf.smileyrating.SmileyRating
                android:id="@+id/ratingServices"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/rating_for_courier"/>

            <com.hsalf.smileyrating.SmileyRating
                android:id="@+id/ratingCourier"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/comment"/>
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/green"
                app:cardElevation="1dp"
                app:contentPadding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:layout_gravity="center"
                    android:text="@string/send_button"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>
</FrameLayout>